--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_background">#3772E7</color>
+    <color name="other_background">#FFFFFF</color>
+    <color name="appName">#FFFFFF</color>
+    <color name="text">#1A1B22</color>
+    <color name="icon">#1A1B22</color>
+    <color name="button">#FFFFFF</color>
 </resources>
