Учтено замечание LinearLayout+ImageView+TextView -> MaterialButton

--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -6,5 +6,5 @@
         android:left="16dp"
         android:right="16dp"
         android:bottom="16dp" />
-    <solid android:color="@color/button" />
+    <solid android:color="@color/white"/>
 </shape>
