--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="setting_back_icon_size">48dp</dimen>
     <dimen name="setting_item_text_size">16sp</dimen>
     <dimen name="main_title_text_size">22sp</dimen>
-    <dimen name="icon_size">24dp</dimen>
+    <dimen name="main_button_radius">16dp</dimen>
+    <dimen name="icon_size">18dp</dimen>
     <dimen name="main_button_text_size">22sp</dimen>
 </resources>
