--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -53,10 +53,11 @@
         />
 
     <LinearLayout
+        android:id="@+id/empty_space"
         android:layout_height="0dp"
         android:layout_width="match_parent"
         android:layout_weight="1"
-        />
+        android:orientation="vertical" />
 
     <LinearLayout
         android:layout_height="wrap_content"
