--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,15 +62,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
     </style>
-    <style name="SettingsIcon">
-        <item name="android:layout_width">@dimen/icon_size</item>
-        <item name="android:layout_height">@dimen/icon_size</item>
-        <item name="android:scaleType">centerInside</item>
-        <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginEnd">@dimen/setting_icon_padding_end</item>
-        <item name="android:tint">@color/YP_Text_Gray</item>
-    </style>
-    <style name="SettingsButton" parent="style/Widget.Material3.Button.IconButton">
+    <style name="SettingsButton" parent="Widget.Material3.Button.IconButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/main_padding</item>
