--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
-<LinearLayout
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
+    tools:context=".SearchActivity"
     android:gravity="center"
     android:background="@color/YP_White">
     <TextView
@@ -17,4 +14,3 @@
         android:text="@string/search"
         android:layout_gravity="center"/>
 </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
