--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/MainLayout"
     android:paddingLeft="@dimen/main_padding"
     android:paddingRight="@dimen/main_padding"
     android:paddingBottom="28dp"
-    android:orientation="vertical"
-    android:background="@color/YP_Blue"
     >
 
     <TextView
