--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/SecondaryLayout"
     tools:context=".SearchActivity"
-    android:gravity="center"
-    android:background="@color/YP_White">
+    android:gravity="center">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/setting_title_text_size"
-        android:textColor="@color/YP_Black"
-        android:text="@string/search"
-        android:layout_gravity="center"/>
+        style="@style/OtherSecondaryTitle"
+        android:text="@string/search"/>
 </LinearLayout>
