--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/YP_White"
-    android:orientation="vertical">
+    style="@style/SecondaryLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,16 +18,19 @@
     <LinearLayout
         style="@style/SettingsItemLayout"
         android:layout_marginTop="28dp">
-        <TextView
-            style="@style/SettingsTextView"
+        <com.google.android.material.button.MaterialButton
+            style="@style/SettingsButton"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:text="@string/dark_theme"/>
+
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:layout_width="56dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="11dp"
             android:gravity="center"
-            app:trackTint="@color/YP_Light_Gray"
-            app:thumbTint="@color/YP_Text_Gray"/>
+            app:thumbTint="?attr/colorControlHighlight"
+            app:trackTint="?attr/colorControlNormal" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -53,7 +53,7 @@
     <LinearLayout
         android:id="@+id/empty_space"
         android:layout_height="0dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_weight="1"
         android:orientation="vertical" />
 
