--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="YP_Light_Gray">#E6E8EB</color>
     <color name="YP_Black">#1A1B22</color>
     <color name="YP_Blue">#3772E7</color>
+    <color name="YP_Blue_Light">#9FBBF3</color>
 </resources>
