--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="MainLayout">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <style name="SecondaryLayout">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">?attr/colorSecondary</item>
+        <item name="android:orientation">vertical</item>
+    </style>
     <style name="MainTitleStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/main_title_text_size</item>
-        <item name="android:textColor">@color/YP_White</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:layout_marginTop">@dimen/title_margin</item>
         <item name="android:layout_marginBottom">40dp</item>
@@ -21,12 +33,12 @@
         <item name="android:gravity">center</item>
         <item name="iconSize">@dimen/icon_size</item>
         <item name="iconGravity">textStart</item>
-        <item name="iconTint">@color/YP_Black</item>
+        <item name="iconTint">?attr/colorOnPrimaryContainer</item>
         <item name="iconPadding">@dimen/icon_padding</item>
         <item name="cornerRadius">@dimen/main_button_radius</item>
-        <item name="android:backgroundTint">@color/YP_White</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryContainer</item>
         <item name="android:textAppearance">?attr/textAppearanceHeadline1</item>
-        <item name="android:textColor">@color/YP_Black</item>
+        <item name="android:textColor">?attr/colorOnPrimaryContainer</item>
         <item name="android:textSize">@dimen/main_button_text_size</item>
         <item name="textAllCaps">false</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
@@ -40,9 +52,17 @@
         <item name="android:paddingRight">@dimen/setting_title_padding</item>
         <item name="android:textSize">@dimen/setting_title_text_size</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/YP_Black</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
+    </style>
+    <style name="OtherSecondaryTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/setting_title_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:gravity">center</item>
     </style>
     <style name="SettingsTextView">
         <item name="android:layout_width">wrap_content</item>
@@ -53,7 +73,7 @@
         <item name="android:paddingBottom">@dimen/setting_padding_tb</item>
         <item name="android:gravity">start</item>
         <item name="android:textSize">@dimen/setting_item_text_size</item>
-        <item name="android:textColor">@color/YP_Black</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
     </style>
@@ -73,11 +93,12 @@
         <item name="android:paddingTop">19dp</item>
         <item name="android:paddingBottom">@dimen/setting_icon_padding_end</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="cornerRadius">0dp</item>
         <item name="iconGravity">end</item>
-        <item name="iconTint">@color/YP_Text_Gray</item>
+        <item name="iconTint">?attr/colorOnSecondaryContainer</item>
         <item name="iconSize">@dimen/icon_size</item>
         <item name="iconPadding">0dp</item>
-        <item name="android:textColor">@color/YP_Black</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textSize">@dimen/setting_item_text_size</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
@@ -91,9 +112,9 @@
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
-        <item name="android:textColor">@color/YP_Black</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="iconSize">24dp</item>
-        <item name="iconTint">@color/YP_Black</item>
+        <item name="iconTint">?attr/colorOnSecondary</item>
         <item name="android:paddingTop">7.5dp</item>
         <item name="iconPadding">0dp</item>
         <item name="cornerRadius">0dp</item>
