--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,16 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/YP_Blue</item>
+        <item name="colorOnPrimary">@color/YP_White</item>
+        <item name="colorSecondary">@color/YP_White</item>
+        <item name="colorOnSecondary">@color/YP_Black</item>
+        <item name="colorPrimaryContainer">@color/YP_White</item>
+        <item name="colorOnPrimaryContainer">@color/YP_Black</item>
+        <item name="colorOnSecondaryContainer">@color/YP_Text_Gray</item>
+        <item name="colorControlHighlight">@color/YP_Text_Gray</item>
+        <item name="colorControlNormal">@color/YP_Light_Gray</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
