--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,9 @@
         <item name="colorOnSecondaryContainer">@color/YP_Text_Gray</item>
         <item name="colorControlHighlight">@color/YP_Text_Gray</item>
         <item name="colorControlNormal">@color/YP_Light_Gray</item>
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
+    </style>
 </resources>
