--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,10 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/SecondaryLayout"
-    tools:context=".SearchActivity"
     android:gravity="center">
+
     <TextView
         style="@style/OtherSecondaryTitle"
         android:text="@string/search"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:paddingTop="8.5dp"
+        android:paddingStart="12dp"
+        android:paddingBottom="7.5dp"
+        android:paddingEnd="10dp"
+        android:background="@drawable/search_edit"
+        android:backgroundTint="@color/YP_Light_Gray">
+
+        <ImageView
+            style="@style/SearchLineIcon"
+            android:src="@drawable/search"
+            android:layout_gravity="start|center_vertical"
+            android:contentDescription="@string/search"/>
+
+        <EditText
+            style="@style/SearchEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="24dp"
+            android:hint="@string/search"
+            android:textSize="16sp"
+            android:paddingBottom="0dp"
+            android:paddingTop="0dp"
+            />
+
+
+        <ImageView
+            style="@style/SearchLineIcon"
+            android:src="@drawable/clear"
+            android:layout_gravity="end|center_vertical"
+            android:contentDescription="@string/clear"
+            />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="end">
+        <com.google.android.material.button.MaterialButton
+            style="@style/SettingsTabButton"
+            android:text="@string/search"
+            app:icon="@drawable/search"
+            app:iconTint="@color/YP_Blue"
+            android:textColor="@color/YP_Blue"/>
+        <com.google.android.material.button.MaterialButton
+            style="@style/SettingsTabButton"
+            android:text="@string/library"
+            app:icon="@drawable/library"/>
+        <com.google.android.material.button.MaterialButton
+            style="@style/SettingsTabButton"
+            android:text="@string/settings"
+            app:icon="@drawable/settings"/>
+    </LinearLayout>
+
 </LinearLayout>
