--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,9 +9,11 @@
         <item name="colorPrimaryContainer">@color/YP_White</item>
         <item name="colorOnPrimaryContainer">@color/YP_Black</item>
         <item name="colorOnSecondaryContainer">@color/YP_White</item>
-        <item name="colorAccent">@color/YP_Blue</item>
         <item name="colorControlHighlight">@color/YP_Blue</item>
         <item name="colorControlNormal">@color/YP_Blue_Light</item>
+        <item name="colorContainer">@color/YP_White</item>
+        <item name="colorOnContainer">@color/YP_Black</item>
+        <item name="colorOnSurfaceVariant">@color/YP_Blue</item>
     </style>
 
 </resources>
