--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -29,6 +29,7 @@
             android:contentDescription="@string/search"/>
 
         <EditText
+            android:id="@+id/search_line"
             style="@style/SearchEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,10 +43,12 @@
 
 
         <ImageView
+            android:id="@+id/clear_button"
             style="@style/SearchLineIcon"
             android:src="@drawable/clear"
             android:layout_gravity="end|center_vertical"
             android:contentDescription="@string/clear"
+            android:visibility="gone"
             />
 
     </FrameLayout>
