Переключение тем вынесено в отдельный модуль и поправлено так, чтобы приложение по умолчанию после установки запускалось в главной активити с текущей темой телефона.
Почти для всех активити настроен портретный режим. Для поиска оставлена возможность менять ориентацию для проверки задания по спринту.

Сделано сохранение данных поисковой строки. Содержание строки сохраняется при навигации.

Реализована навигация по кнопкам. По мере развития проекта сделаю навигацию другими средствами, не через button'ы.

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -54,7 +54,7 @@
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
@@ -71,10 +71,12 @@
             android:textColor="@color/YP_Blue"/>
         <com.google.android.material.button.MaterialButton
             style="@style/SettingsTabButton"
+            android:id="@+id/search_library_button"
             android:text="@string/library"
             app:icon="@drawable/library"/>
         <com.google.android.material.button.MaterialButton
             style="@style/SettingsTabButton"
+            android:id="@+id/search_settings_button"
             android:text="@string/settings"
             app:icon="@drawable/settings"/>
     </LinearLayout>
