Из экрана поиска убрала нижнее меню, добавила кнопку "назад". Доработала другие детали дизайна

--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SecondaryLayout"
-    tools:context=".LibraryActivity"
-    android:gravity="center">
+    tools:context=".LibraryActivity">
         <TextView
             style="@style/OtherSecondaryTitle"
             android:text="@string/library"/>
