--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/SecondaryLayout"
-    android:gravity="center">
+    style="@style/SecondaryLayout">
 
-    <TextView
-        style="@style/OtherSecondaryTitle"
-        android:text="@string/search"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/SecondaryLayoutTitle">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_back"
+            android:id="@+id/search_back_button"
+            android:layout_gravity="center"
+            android:paddingRight="12dp"
+            app:tint="?attr/colorOnSecondary" />
+
+        <TextView
+            style="@style/OtherSecondaryTitle"
+            android:text="@string/search" />
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:paddingTop="8.5dp"
+        android:paddingTop="8dp"
         android:paddingStart="12dp"
-        android:paddingBottom="7.5dp"
+        android:paddingBottom="8dp"
         android:paddingEnd="10dp"
         android:background="@drawable/search_edit"
         android:backgroundTint="@color/YP_Light_Gray">
@@ -52,33 +64,4 @@
             />
 
     </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:gravity="end">
-        <com.google.android.material.button.MaterialButton
-            style="@style/SettingsTabButton"
-            android:text="@string/search"
-            app:icon="@drawable/search"
-            app:iconTint="@color/YP_Blue"
-            android:textColor="@color/YP_Blue"/>
-        <com.google.android.material.button.MaterialButton
-            style="@style/SettingsTabButton"
-            android:id="@+id/search_library_button"
-            android:text="@string/library"
-            app:icon="@drawable/library"/>
-        <com.google.android.material.button.MaterialButton
-            style="@style/SettingsTabButton"
-            android:id="@+id/search_settings_button"
-            android:text="@string/settings"
-            app:icon="@drawable/settings"/>
-    </LinearLayout>
-
 </LinearLayout>
