--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,8 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="@dimen/title_margin">
+        style="@style/SecondaryLayoutTitle">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
