--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,14 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">?attr/colorSecondary</item>
         <item name="android:orientation">vertical</item>
+        <item name="android:paddingStart">@dimen/main_padding</item>
+        <item name="android:paddingLeft">@dimen/main_padding</item>
+        <item name="android:paddingRight">@dimen/main_padding</item>
+        <item name="android:layout_gravity">top</item>
+    </style>
+    <style name="SecondaryLayoutTitle">
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_margin">@dimen/title_margin</item>
     </style>
     <style name="MainTitleStyle">
         <item name="android:layout_width">wrap_content</item>
@@ -60,7 +68,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">14dp</item>
-        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingBottom">16dp</item>
         <item name="android:textSize">@dimen/setting_title_text_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
