--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -3,7 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SecondaryLayout"
     tools:context=".LibraryActivity">
-        <TextView
-            style="@style/OtherSecondaryTitle"
-            android:text="@string/library"/>
+        <LinearLayout
+            style="@style/SecondaryLayoutTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/library_back_button"
+                    style="@style/BackIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    style="@style/OtherSecondaryTitle"
+                    android:text="@string/library"/>
+
+        </LinearLayout>
+
 </LinearLayout>
