--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,4 +16,23 @@
         <item name="colorOnSurfaceVariant">@color/YP_Blue</item>
     </style>
 
+    <style name="TrackName">
+        <item name="android:textColor">@color/YP_White</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="ArtistName" parent="TrackName">
+        <item name="android:textColor">@color/YP_White</item>
+        <item name="android:drawableTint">@color/YP_White</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+
+    <style name="TrackForwardIcon">
+        <item name="backgroundTint">@color/YP_White</item>
+    </style>
 </resources>
