--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="main_button_radius">16dp</dimen>
     <dimen name="icon_size">24dp</dimen>
     <dimen name="main_button_text_size">22sp</dimen>
+    <dimen name="zero">0dp</dimen>
+    <dimen name="track_name_margin">8dp</dimen>
 </resources>
