--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,24 @@
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
         <item name="android:statusBarColor">?attr/colorPrimary</item>
     </style>
+    
+    <style name="TrackName">
+        <item name="android:textColor">@color/YP_Black_Total</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="ArtistName" parent="TrackName">
+        <item name="android:textColor">@color/YP_Text_Gray</item>
+        <item name="android:drawableTint">@color/YP_Text_Gray</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+
+    <style name="TrackForwardIcon">
+        <item name="backgroundTint">@color/YP_Text_Gray</item>
+    </style>
 </resources>
