--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,6 +76,9 @@
         <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:gravity">left</item>
     </style>
+    
+    <!-- Стили SettingsLayout -->
+    
     <style name="SettingsTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -131,14 +134,20 @@
         <item name="iconPadding">0dp</item>
         <item name="cornerRadius">0dp</item>
     </style>
+    
+    <!-- Стили SearchLayout -->
+    
     <style name="SearchEditText">
         <item name="colorControlActivated">@android:color/transparent</item>
         <item name="colorControlHighlight">@android:color/transparent</item>
         <item name="colorControlNormal">@android:color/transparent</item>
         <item name="backgroundTint">@android:color/transparent</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:paddingTop">0dp</item>
         <item name="android:textCursorDrawable">@drawable/cursor</item>
         <item name="android:textColor">@color/YP_Black_Total</item>
         <item name="android:textColorHint">?attr/colorOnContainer</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:gravity">center_vertical|left</item>
         <item name="android:inputType">text</item>
         <item name="android:textIsSelectable">false</item>
@@ -169,5 +178,29 @@
         <item name="android:paddingEnd">10dp</item>
         <item name="android:background">@drawable/search_edit</item>
         <item name="android:backgroundTint">@color/YP_Light_Gray</item>
+    </style>
+    <style name="TrackErrorStyle">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:drawablePadding">16dp</item>
+        <item name="android:paddingTop">102dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:visibility">gone</item>
+    </style>
+    <style name="UpdateButton">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:backgroundTint">?attr/colorOnSecondary</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">14dp</item>
+        <item name="android:paddingRight">14dp</item>
+        <item name="android:textColor">?attr/colorSecondary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">14sp</item>
+        <item name="cornerRadius">54dp</item>
     </style>
 </resources>
