--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -90,7 +90,7 @@
         android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/track_list"
+        android:id="@+id/recycler_track_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
