--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -197,10 +197,22 @@
         <item name="android:insetBottom">0dp</item>
         <item name="android:paddingLeft">14dp</item>
         <item name="android:paddingRight">14dp</item>
+        <item name="android:layout_marginBottom">@dimen/main_padding</item>
         <item name="android:textColor">?attr/colorSecondary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
         <item name="android:textSize">14sp</item>
         <item name="cornerRadius">54dp</item>
+    </style>
+    <style name="HistoryTitleStyle">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">18dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 </resources>
