13 спринт. Изменения по замечаниям

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -84,8 +84,8 @@
 
 <ImageView
     android:id="@+id/add_to_pl_button"
-    android:layout_width="51dp"
-    android:layout_height="51dp"
+    android:layout_width="@dimen/player_small_button"
+    android:layout_height="@dimen/player_small_button"
     app:layout_constraintHorizontal_chainStyle="spread_inside"
     app:layout_constraintStart_toStartOf="@id/start_guide"
     app:layout_constraintTop_toTopOf="@id/play_button"
@@ -94,8 +94,8 @@
 
 <ImageView
     android:id="@+id/play_button"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="@dimen/player_big_button"
+    android:layout_height="@dimen/player_big_button"
     app:layout_constraintHorizontal_chainStyle="spread_inside"
     app:layout_constraintStart_toStartOf="@id/add_to_pl_button"
     app:layout_constraintEnd_toEndOf="@id/like_button"
@@ -107,8 +107,8 @@
 
 <ImageView
     android:id="@+id/like_button"
-    android:layout_width="51dp"
-    android:layout_height="51dp"
+    android:layout_width="@dimen/player_small_button"
+    android:layout_height="@dimen/player_small_button"
     app:layout_constraintHorizontal_chainStyle="spread_inside"
     app:layout_constraintEnd_toEndOf="@id/end_guide"
     app:layout_constraintTop_toTopOf="@id/play_button"
