--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="main_button_text_size">22sp</dimen>
     <dimen name="zero">0dp</dimen>
     <dimen name="track_name_margin">8dp</dimen>
+    <dimen name="player_small_button">51dp</dimen>
+    <dimen name="player_big_button">100dp</dimen>
 </resources>
