14 спринт. Исправлена ошибка отображения прогресс бара при пустой истории

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -125,7 +125,8 @@
         android:layout_height="@dimen/progress_bar_size"
         android:layout_marginTop="@dimen/progress_bar_margin"
         android:layout_gravity="center"
-        android:indeterminateTint="@color/YP_Blue"/>
+        android:indeterminateTint="@color/YP_Blue"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_track_list"
